Agrego parte de las vistas

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,13 +12,13 @@
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">Pacientes</h5>
-            <a href="pacientes.html" class="btn btn-primary">Ver pacientes</a>
+            <a href="/pacientes" class="btn btn-primary">Ver pacientes</a>
         </div>
     </div>
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">Odontologos</h5>
-            <a href="pacientes.html" class="btn btn-primary">Ver odontologos</a>
+            <a href="../templates/odontologos-list.html" class="btn btn-primary">Ver odontologos</a>
         </div>
     </div>
     <div class="card">
